[gd_scene load_steps=18 format=3 uid="uid://cg0t7flgklbhv"]

[ext_resource type="Script" uid="uid://bfwdhrs5yuqw6" path="res://CardUI.gd" id="1_gf2xd"]
[ext_resource type="Texture2D" uid="uid://ddhosx4va3pqq" path="res://assets/cartas/coroadomartir/coroadomartir1.png" id="2_tkyow"]
[ext_resource type="Texture2D" uid="uid://bwb5t8wp6kay8" path="res://assets/cartas/coroadomartir/coroadomartir2.png" id="3_ktfps"]
[ext_resource type="Texture2D" uid="uid://d3ficpspwmweh" path="res://assets/cartas/coroadomartir/coroadomartir3.png" id="4_gkbk4"]
[ext_resource type="Texture2D" uid="uid://g11a1f030vk5" path="res://assets/cartas/coroadomartir/coroadomartir4.png" id="5_13weq"]
[ext_resource type="Texture2D" uid="uid://vqu8wbrg12sa" path="res://assets/cartas/coroadomartir/coroadomartir5.png" id="6_l3n7e"]
[ext_resource type="Texture2D" uid="uid://dwxtvsfgxmy6w" path="res://assets/cartas/coroadomartir/coroadomartir6.png" id="7_a1y7h"]
[ext_resource type="Texture2D" uid="uid://p2ih6hhe43ps" path="res://assets/cartas/coroadomartir/coroadomartir7.png" id="8_3fj08"]
[ext_resource type="Texture2D" uid="uid://uhr1iq43jqkb" path="res://assets/cartas/coroadomartir/coroadomartir8.png" id="9_it0me"]
[ext_resource type="Texture2D" uid="uid://d4d7eaqlfm712" path="res://assets/cartas/coroadomartir/coroadomartir9.png" id="10_y27li"]
[ext_resource type="Texture2D" uid="uid://5s1yfufuwlbu" path="res://assets/cartas/coroadomartir/coroadomartir10.png" id="11_q5mp1"]
[ext_resource type="Texture2D" uid="uid://duv5jdjbwobnr" path="res://assets/cartas/coroadomartir/coroadomartir11.png" id="12_1y5ed"]
[ext_resource type="Texture2D" uid="uid://wvbholwe1bfl" path="res://assets/cartas/coroadomartir/coroadomartir12.png" id="13_t15k0"]
[ext_resource type="Texture2D" uid="uid://bmxk6wxrxinrj" path="res://assets/cartas/coroadomartir/coroadomartir13.png" id="14_g1w3d"]
[ext_resource type="Texture2D" uid="uid://d3hfadvlyh75h" path="res://assets/cartas/coroadomartir/coroadomartir14.png" id="15_0fwit"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0afrf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tkyow")
}, {
"duration": 1.0,
"texture": ExtResource("3_ktfps")
}, {
"duration": 1.0,
"texture": ExtResource("4_gkbk4")
}, {
"duration": 1.0,
"texture": ExtResource("5_13weq")
}, {
"duration": 1.0,
"texture": ExtResource("6_l3n7e")
}, {
"duration": 1.0,
"texture": ExtResource("7_a1y7h")
}, {
"duration": 1.0,
"texture": ExtResource("8_3fj08")
}, {
"duration": 1.0,
"texture": ExtResource("9_it0me")
}, {
"duration": 1.0,
"texture": ExtResource("10_y27li")
}, {
"duration": 1.0,
"texture": ExtResource("11_q5mp1")
}, {
"duration": 1.0,
"texture": ExtResource("12_1y5ed")
}, {
"duration": 1.0,
"texture": ExtResource("13_t15k0")
}, {
"duration": 1.0,
"texture": ExtResource("14_g1w3d")
}, {
"duration": 1.0,
"texture": ExtResource("15_0fwit")
}],
"loop": true,
"name": &"coroa_do_martir_idle",
"speed": 6.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_huidv"]
bg_color = Color(0.84406894, 0.502775, 0.26638845, 1)

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(150, 250)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gf2xd")

[node name="CardTexture" type="TextureRect" parent="."]
custom_minimum_size = Vector2(150, 250)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 108.0
offset_top = 208.0
offset_right = 108.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CardAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(-134, 9)
sprite_frames = SubResource("SpriteFrames_0afrf")
animation = &"coroa_do_martir_idle"
autoplay = "coroa_do_martir_idle"
frame_progress = 0.21175915
centered = false

[node name="CardNameLabel" type="Label" parent="."]
layout_mode = 1
offset_right = 1.0
offset_bottom = 23.0
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 60.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_huidv")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ClickButton" type="Button" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 187.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2
flat = true
